# my-tool

./: .gitignore  ENV_CONFIG.md  QUICK_SUMMARY.md  SETUP_GUIDE.md  main.py  pyproject.toml
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: models.py  routes.py
backend/app/core/: config.py  excel.py
backend/app/utils/: cleanup.py
excel-tool/: README.md  db.sqlite3
excel-tool/mysite/: settings.py  urls.py
excel-tool/tool/: admin.py  forms.py  models.py  urls.py  utils.py  views.py  views_redirect.py  views_simple.py
excel-tool/tool/migrations/: 0001_initial.py  0002_conversionhistory_client_id_uploadedfile_client_id_and_more.py  0003_remove_conversionhistory_client_id_and_more.py
excel-tool/tool/static/js/: app.js
excel-tool/tool/templates/tool/: index.html  simple.html
frontend/: .env.example  COMPONENT_STRUCTURE.md  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: api.ts
frontend/src/lib/components/: FileUploadZone.svelte  ProcessResults.svelte  SheetSelector.svelte  SingleSheetResult.svelte
frontend/src/lib/stores/: excelTool.ts
frontend/src/routes/: +page.svelte  layout.css
